# xfs-utility

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: inaug.md
docs/diagram/: xfs_utility_clsd.drawio
include/xfsutil/buffer/: buffer_page.h  fbuffer.h
include/xfsutil/buffer/interface/: buffer_page_i.h  page_in_i.h  page_out_i.h
include/xfsutil/buffer/page/: buffer_page.h
include/xfsutil/buffer/page/interface/: buffer_page_i.h  page_in_i.h  page_out_i.h
include/xfsutil/buffer/util/: constants.h
include/xfsutil/path/: sys_path_attr.h  system_path.h
include/xfsutil/path/util/: path_tool.h
src/: CMakeLists.txt
src/buffer/: buffer_page.cpp
src/buffer/interface/: buffer_page_i.cpp
src/buffer/util/: constants.cpp
src/path/: system_path.cpp
src/path/util/: path_tool.cpp
tests/: CMakeLists.txt  buffer_dev.txt  dev.cpp  micro.txt
